[gd_scene load_steps=5 format=3 uid="uid://hbfe37beu8th"]

[ext_resource type="Script" path="res://units/unit.gd" id="1_t07ck"]
[ext_resource type="Texture2D" uid="uid://bl2ifxi32qv5a" path="res://white.png" id="2_7sfyc"]
[ext_resource type="PackedScene" uid="uid://pxrgs6h2kikk" path="res://tile.tscn" id="3_aylqw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m7jb6"]
radius = 4.0

[node name="unit" type="Node2D" groups=["targetable"]]
position = Vector2(25, 16)
script = ExtResource("1_t07ck")
max_ms = 16.0
min_ms = 4.0
dps = 5.0
max_hp = 20.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_7sfyc")

[node name="Area2D" type="Area2D" parent="." groups=["solid"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_m7jb6")

[node name="job_indicator" parent="." instance=ExtResource("3_aylqw")]
position = Vector2(4, -5)
scale = Vector2(2, 2)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
